--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/pro-solid-svg-icons": "^6.1.1",
     "@fortawesome/pro-thin-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.8",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "dotenv": "^16.0.1",
     "moment": "^2.29.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
