--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/pro-duotone-svg-icons": "^6.1.1",
     "@fortawesome/pro-light-svg-icons": "^6.1.1",
     "@fortawesome/pro-regular-svg-icons": "^6.1.1",
@@ -16,11 +20,13 @@
     "@fortawesome/pro-thin-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "axios": "^0.27.2",
+    "buttercms": "^1.2.9",
     "core-js": "^3.6.5",
     "dotenv": "^16.0.1",
     "moment": "^2.29.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-style-loader": "^4.1.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
